--- a/index.html
+++ b/index.html
@@ -2,34 +2,60 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>saaditani.com</title>
+  <title>saad itani</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Google font -->
+  <!-- Google font: Inconsolata -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
 
   <!-- your css -->
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-  <main class="card">
-    <span class="corner-note">saaditani.com</span>
-    <h1>Hello, I’m Saad 👋</h1>
-    <p class="tagline">A little corner on the internet. Still deciding what to put here.</p>
+  <main class="container">
+    <header>
+      <h1>saad itani</h1>
+      <nav>
+        <span class="nav-label">navigate:</span>
+        <a href="#about" class="nav-link about">about</a> /
+        <a href="#projects" class="nav-link projects">projects</a> /
+        <a href="#contact" class="nav-link contact">contact</a>
+      </nav>
+    </header>
 
-    <p class="status">
-      This website is <strong>under construction</strong> — I’m setting things up and still testing things out.
-      Check back soon.
-    </p>
+    <hr class="divider">
 
-   
+    <section class="content">
+      <p>
+        hi! i'm <strong>saad</strong>. i like data & finance.
+      </p>
 
-    <div class="footer">
-      <div class="mono" id="build-label">Draft build · v0.1</div>
-      <div>Last updated by Saad.</div>
-    </div>
+      <p>
+        i have a background in computer science engineering. currently exploring
+        the intersection of technology and financial markets.
+      </p>
+
+      <p>
+        some things i like: chess, photography, building things, markets,
+        good coffee, and learning new stuff.
+      </p>
+
+      <p>
+        here are some links to my internet things:<br>
+        <a href="https://github.com/saad-itani" class="link github">github</a>,
+        <a href="https://linkedin.com/in/saadallah-itani" class="link linkedin">linkedin</a>
+      </p>
+
+      <p class="contact-note">
+        you can reach me at saad [at] saaditani [dot] com
+      </p>
+    </section>
+
+    <footer>
+      <button class="light-switch" id="theme-toggle">(light switch)</button>
+    </footer>
   </main>
 
   <!-- your js -->
